syntax = "proto3";

option go_package = "generated/pb/game";

message InitializeNpcComponentsEvent
{
  uint64 actor_entity = 1;
}